# codeflix-micro-videos-py

./: Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
src/__seedwork/domain/: utils.py  value_objects.py
src/__seedwork/tests/unit/domain/: test_unit_utils.py
src/category/domain/: entities.py
src/category/tests/unit/domain/: test_unit_entities.py
