[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gabriel Da Silva Caetano", email = "98gabrielsc@gmail.com"},
]
license-expression = "MIT"
dependencies = [
    "pytest>=7.2.1",
]
requires-python = ">=3.10.2"

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.13.0",
    "pytest>=7.1.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
